fixed issue where components were not showing

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,4 @@
 header {
-    height: 100vh;
-    padding-top: 10rem;
-    overflow: hidden;
+    background-color: black;
+    color: white;
 }
